--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/react": "^1.5.7",
     "gatsby": "^2.19.45",
     "gatsby-plugin-mdx": "^1.1.1",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-source-filesystem": "^2.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
